@@ -17,9 +17,6 @@ type Runner interface {
 	// publisher.Client will be closed by Stop. If Stop is called more than
 	// once, only the first stop the Module and wait for it to exit.
 	Stop()
-
-	// Added to be consistent with cfgfile.Runner
-	ID() uint64
 }
 
 // NewRunner returns a Runner facade. The events generated by
@@ -59,8 +56,4 @@ func (mr *runner) Stop() {
 		mr.client.Close()
 		mr.wg.Wait()
 	})
-}
-
-func (mr *runner) ID() uint64 {
-	return mr.mod.Hash()
 }
